# pulchra

./: .coverage  .gitignore  AGENTS.md  Makefile  README.md  app.py  create_ca_pdb.py  parse_nco.py  parsed_data.py  pulchra.py  pyproject.toml
c_legacy/src/: pulchra.c
config/: common.json  networks.json
data_conversion/: parse_rotamer_data.py  top_all27_prot_lipid.inp
pulchra/: constants.py  core.py  data.py  energy.py  geometry.py  hydrogens.py  pdb_datastructures.py  pdb_parser.py  pdb_writer.py  pulchra.py  rotamer_data.py
pulchra/parameters/: ALA.json  ARG.json  ASN.json  ASP.json  CYS.json  GLN.json  GLU.json  GLY.json  HIS.json  ILE.json  LEU.json  LYS.json  MET.json  PHE.json  PRO.json  SER.json  THR.json  TRP.json  TYR.json  UNK.json  VAL.json  nco_stat.json
scripts/: debug_parser.py  extract_hydrogens.py  generate_data.py  parse_charmm_topology.py  temp_parser.py
tests/: test_hydrogens.py  test_pulchra.py
